--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         /* Hero Section */
         .hero {
-            height: 100vh;
+            height: 70vh;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -363,7 +363,7 @@
                     </div>
                     <div class="team-card fade-in">
                         <h3>👥 Supervisora</h3>
-                        <p><strong> Nayara Barros :: Gestão compartilhada com Secretaria de Vendas</strong></p>
+                        <p><strong>Gestão compartilhada com Secretaria de Vendas</strong></p>
                         <p>Garantindo integração eficiente entre áreas comerciais</p>
                     </div>
                     <div class="team-card fade-in">
