--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                     <div class="kpi-card fade-in">
                         <div class="kpi-number">🔻</div>
                         <h3>Redução de Distratos</h3>
-                        <p>Detecção precoce e recuperação eficiente de clientes em risco</p>
+                        <p>Detecção precoce e recuperação eficiente de clientes em risco de cancelamento e financeiro</p>
                     </div>
                     <div class="kpi-card fade-in">
                         <div class="kpi-number">⚡</div>
