--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                         <p>Responsável pela visão estratégica e alinhamento com objetivos de negócio</p>
                     </div>
                     <div class="team-card fade-in">
-                        <h3>👥 Supervisora</h3>
+                        <h3>👥 Supervisora Tech Lead</h3>
                         <p><strong>Gestão compartilhada com Secretaria de Vendas</strong></p>
                         <p>Garantindo integração eficiente entre áreas comerciais</p>
                     </div>
