--- a/index.html
+++ b/index.html
@@ -973,8 +973,8 @@
                             <div class="resource-category">
                                 <h4>Comunicação</h4>
                                 <ul>
-                                    <li><strong>Reuniões:</strong> Teams, Zoom</li>
-                                    <li><strong>Chat:</strong> Slack, Teams</li>
+                                    <li><strong>Reuniões:</strong> Teams</li>
+                                    <li><strong>Chat:</strong> Teams</li>
                                 </ul>
                             </div>
                         </div>
