--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@
 
         /* Hero Section */
         .hero {
-            height: 70vh;
+                       height: 90vh;
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
-            color: #333;
+            color: white;
             position: relative;
             overflow: hidden;
-            background: #f8f9fa;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            margin-bottom: 80px;
+
         }
         .hero::before {
             content: '';
