--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
             font-size: 3.5rem;
             margin-bottom: 1rem;
             animation: fadeInUp 1s ease-out;
-            color: #333;
+            color: white;
         }
         .hero p {
             font-size: 1.3rem;
             margin-bottom: 2rem;
             animation: fadeInUp 1s ease-out 0.3s both;
-            color: #333;
+            color: white;
         }
         .cta-button {
             display: inline-block;
