--- a/index.html
+++ b/index.html
@@ -524,13 +524,13 @@
                 <div class="team-grid">
                     <div class="team-card fade-in">
                         <h3>🎯 Líder de Chapter</h3>
-                        <p><strong>Direcionamento estratégico e coordenação</strong></p>
+                        <p><strong> Jociele França </strong></p>
                         <p>Responsável pela visão estratégica e alinhamento com objetivos de negócio</p>
                     </div>
                     <div class="team-card fade-in">
-                        <h3>👥 Supervisora Tech Lead</h3>
-                        <p><strong>Gestão compartilhada com Secretaria de Vendas</strong></p>
-                        <p>Garantindo integração eficiente entre áreas comerciais</p>
+                        <h3>👥 Tech Lead</h3>
+                        <p><strong> Nayara Barros </strong></p>
+                        <p> Gestão compartilhada com Secretaria de Vendas - Garantindo integração eficiente entre áreas comerciais</p>
                     </div>
                     <div class="team-card fade-in">
                         <h3>📊 Analista de Dados</h3>
@@ -713,7 +713,57 @@
                                 </tbody>
                             </table>
                         </div>
+                    </div>   <!-- Módulo 2: Fundamentos de Dados -->
+                    <div class="module-card fade-in">
+                        <div class="module-header">
+                            <div class="module-icon">📊</div>
+                            <div class="module-title">Módulo 2: Fundamentos de Dados e Análise</div>
+                        </div>
+                        <div class="training-table">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Treinamento</th>
+                                        <th>Público-Alvo</th>
+                                        <th>Formato</th>
+                                        <th>Duração</th>
+                                        <th>Recursos Necessários</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Fundamentos de Análise de Dados</td>
+                                        <td>Toda equipe</td>
+                                        <td><span class="format-badge">Workshop interno</span></td>
+                                        <td><span class="duration-badge">6h</span></td>
+                                        <td>Apostila, datasets de exemplo</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Visualização de Dados e Storytelling</td>
+                                        <td>Toda equipe</td>
+                                        <td><span class="format-badge">Workshop externo</span></td>
+                                        <td><span class="duration-badge">16h</span></td>
+                                        <td>Contratação de especialista</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Estatística Aplicada a Negócios</td>
+                                        <td>Toda equipe</td>
+                                        <td><span class="format-badge">Curso online + projeto</span></td>
+                                        <td><span class="duration-badge">30h</span></td>
+                                        <td>Acesso plataforma online, dados internos</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Modelos de Atribuição e Funil de Vendas</td>
+                                        <td>Toda equipe</td>
+                                        <td><span class="format-badge">Workshop interno</span></td>
+                                        <td><span class="duration-badge">8h</span></td>
+                                        <td>Cases do mercado imobiliário</td>
+                                              </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
+
 
                     <!-- Módulo 3: Ferramentas e Tecnologias -->
                     <div class="module-card fade-in">
@@ -1094,54 +1144,4 @@
     </script>
 </body>
 </html>
-                            </table>
-                        </div>
-                    </div>
-
-                    <!-- Módulo 2: Fundamentos de Dados -->
-                    <div class="module-card fade-in">
-                        <div class="module-header">
-                            <div class="module-icon">📊</div>
-                            <div class="module-title">Módulo 2: Fundamentos de Dados e Análise</div>
-                        </div>
-                        <div class="training-table">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Treinamento</th>
-                                        <th>Público-Alvo</th>
-                                        <th>Formato</th>
-                                        <th>Duração</th>
-                                        <th>Recursos Necessários</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Fundamentos de Análise de Dados</td>
-                                        <td>Toda equipe</td>
-                                        <td><span class="format-badge">Workshop interno</span></td>
-                                        <td><span class="duration-badge">6h</span></td>
-                                        <td>Apostila, datasets de exemplo</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Visualização de Dados e Storytelling</td>
-                                        <td>Toda equipe</td>
-                                        <td><span class="format-badge">Workshop externo</span></td>
-                                        <td><span class="duration-badge">16h</span></td>
-                                        <td>Contratação de especialista</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Estatística Aplicada a Negócios</td>
-                                        <td>Toda equipe</td>
-                                        <td><span class="format-badge">Curso online + projeto</span></td>
-                                        <td><span class="duration-badge">30h</span></td>
-                                        <td>Acesso plataforma online, dados internos</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Modelos de Atribuição e Funil de Vendas</td>
-                                        <td>Toda equipe</td>
-                                        <td><span class="format-badge">Workshop interno</span></td>
-                                        <td><span class="duration-badge">8h</span></td>
-                                        <td>Cases do mercado imobiliário</td>
-                                    </tr>
-                                </tbody>
+            
